2008-02-19  Marcus Brinkmann  <marcus@g10code.de>

	* src/kleowrap.c: New file.
	* src/kleopatra.bat: Removed.
	* src/Makefile.am (EXTRA_DIST): Remove kleopatra.bat, add
	kleowrap.c.
	(CLEANFILES): Add kleowrap.exe.
	(gpg4win-$(VERSION).exe, gpg4win-light-$(VERSION).exe,
	(gpg4win-$(VERSION).wix, gpg4win-light-$(VERSION).wix): Add
	kleowrap.exe as dependency.
	(gpgwrap.exe): Use make magic.
	(kleowrap.exe): New target.
	* src/inst-kleopatra.nsi: Install kleowrap.exe as kleopatra.exe,
	and do not install kleopatra.bat.
	* src/uninst-kleopatra.nsi: Uninstall kleopatra.exe instead of
	kleopatra.bat.
	* src/inst-sections.nsi (no_desktop): Replace kleopatra.bat by
	kleopatra.exe.

2008-02-18  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kdelibs and kleopatra.

2008-02-18  Werner Koch  <wk@g10code.com>

	* src/installer.nsi: Take the README file from share/gpg4win.
	This is required because we now make sure that the last output
	directory is now the top directory.

	* packages/packages.current: Update GpgOL.

2008-02-16  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Undo update of kdelibs and kleopatra.

	* packages/packages.current: Update dirmngr, gpgme, gpa, gnupg,
	w32pth, kdelibs, and kleopatra.

2008-02-15  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update pinentry, gnupg and gpgme.

2008-02-12  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libksba.

2008-02-09  Marcus Brinkmann  <marcus@g10code.de>

	* patches/gnupg-1.4.8/01-gpgconf-list.patch: New file.
	* patches/gnupg2-2.0.8/06-gpgconf-list.patch: New file.
	* Makefile.am (EXTRA_DIST): Add these.

2008-02-08  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kleopatra.
	* src/inst-kdelibs.nsi: Move kcmdwrapper.exe to bin.
	* src/uninst-kdelibs.nsi: Uninstall it there.

2008-02-06  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GpgOL.
